force-app/main/default/objects/Invoice_Line_Item__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Monthly Fee, Initial Fee, Service Fee</description>
    <label>Fee Type</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>