force-app/main/default/objects/Invoice_Line_Item__c/fields/Fee_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_Name__c</fullName>
    <formula>Fee_Type__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>