force-app/main/default/objects/Invoice_Line_Item__c/fields/QBO_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>QBO_Item_Id__c</fullName>
    <label>QBO Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>